# mockzilla

./: .dockerignore  .env.example  .env.landing.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CI-CD.md  DOCKER-QUICK-REF.md  DOCKER.md  DOC_MIGRATION.md  Dockerfile  Dockerfile.dev  Dockerfile.prd  LANDING_DOC.md  LICENSE.txt  Makefile  README.md  biome.json  bunfig.toml  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  docker-helper.sh  drizzle.config.ts  eslint.config.mjs  mdx-components.tsx  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  test-interpolation.ts  theme.config.tsx  tsconfig.json
.qwen/: settings.json  settings.json.orig
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: confirm-destructive-action.tsx  create-folder-dialog.tsx  create-mock-dialog.tsx  edit-folder-dialog.tsx  edit-mock-dialog.tsx  extension-mock-form.tsx  extension-mock-table.tsx  folder-delete-button.tsx  folder-form.tsx  folder-list.tsx  folder-tooltips.tsx  mock-advanced-options.tsx  mock-card.tsx  mock-delete-button.tsx  mock-editor.tsx  mock-extension-list.tsx  mock-form-inline.tsx  mock-form.tsx  mock-response-config.tsx  mock-variant-manager.tsx  openapi-import-dialog.tsx  pagination-controls.tsx  quick-mock-dialog.tsx  site-footer.tsx  theme-provider.tsx  theme-switcher.tsx  visual-pattern-preview.tsx
documentation/: DOCKER.md  design-system.md  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+269 files in other folders)
